// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`works for a community 1`] = `
Object {
  "graphql": Object {
    "query": "query (
  $id: String,
  $sortBy: String,
  $offset: Int,
  $search: String,
  $filter: String,
  $topic: Int,
  $first: Int
) {
  community(slug: $id) {
    id
    slug
    name
    avatarUrl
    bannerUrl
    postCount
    
posts(
  first: $first,
  offset: $offset,
  sortBy: $sortBy,
  search: $search,
  filter: $filter,
  topic: $topic,
  order: \\"desc\\"
) {
  hasMore
  items {
    id
    title
    details
    type
    creator {
      id
      name
      avatarUrl
      tagline
    }
    createdAt
    updatedAt
    commenters(first: 3) {
      id
      name
      avatarUrl
    }
    commentersTotal
    linkPreview {
      title
      url
      imageUrl
    }
    votesTotal
    myVote
    communities {
      id
      name
      slug
    }
  }
}
  }
}",
    "variables": Object {
      "filter": "offer",
      "first": 20,
      "id": "foo",
      "offset": 20,
      "search": "gardening",
      "sortBy": undefined,
      "topic": undefined,
    },
  },
  "meta": Object {
    "extractModel": "Community",
  },
  "type": "FETCH_POSTS",
}
`;

exports[`works for all communities 1`] = `
Object {
  "graphql": Object {
    "query": "query (
  $sortBy: String,
  $offset: Int,
  $search: String,
  $filter: String,
  $topic: ID,
  $first: Int
) {
  
posts(
  first: $first,
  offset: $offset,
  sortBy: $sortBy,
  search: $search,
  filter: $filter,
  topic: $topic,
  order: \\"desc\\"
) {
  hasMore
  items {
    id
    title
    details
    type
    creator {
      id
      name
      avatarUrl
      tagline
    }
    createdAt
    updatedAt
    commenters(first: 3) {
      id
      name
      avatarUrl
    }
    commentersTotal
    linkPreview {
      title
      url
      imageUrl
    }
    votesTotal
    myVote
    communities {
      id
      name
      slug
    }
  }
}
}",
    "variables": Object {
      "filter": "request",
      "first": 20,
      "id": "all-communities",
      "offset": 20,
      "search": "graphic design",
      "sortBy": undefined,
      "topic": undefined,
    },
  },
  "meta": Object {
    "extractModel": "Post",
  },
  "type": "FETCH_POSTS",
}
`;
